force-app/main/default/objects/Follow_Up_Request__c/Follow_Up_Request__c.object-meta.xml
<CustomObject>
    <label>Follow Up Request</label>
    <nameField>
        <displayFormat>FUP-{0000}</displayFormat>
        <label>Follow Up Requests Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Follow Up Requests</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>