force-app/main/default/objects/Follow_Up_Request__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Follow Up Requests</relationshipLabel>
    <relationshipName>Follow_Up_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>