force-app/main/default/objects/Follow_Up_Request__c/fields/Follow_Up_Remarks__c.field-meta.xml
<CustomField>
    <fullName>Follow_Up_Remarks__c</fullName>
    <label>Follow Up Remarks</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>