force-app/main/default/objects/Follow_Up_Request__c/fields/Response_Notes__c.field-meta.xml
<CustomField>
    <fullName>Response_Notes__c</fullName>
    <label>Response Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>