force-app/main/default/objects/Follow_Up_Request__c/fields/showFlags__c.field-meta.xml
<CustomField>
    <fullName>showFlags__c</fullName>
    <formula>IF(ISPICKVAL(Follow_Up_Status__c, &quot;Responded&quot;),
    IMAGE(&quot;/img/samples/flag_green.gif&quot;, &quot;Green Flag&quot;, 20, 20) ,
    IMAGE(&quot;/img/samples/flag_red.gif&quot;, &quot;Red Flag&quot;, 20, 20) 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>showFlags</label>
    <type>Text</type>
</CustomField>